Internal-3: focus on OEM display restore probe